--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,4 +116,13 @@ dependencies {
     }
 }
 
+project.ext.vectoricons = [
+
+    iconFontNames: [ "FontAwesome.ttf", "Ionicons.ttf" ] // Name of the font files you want to copy
+
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
